--- a/init.smdk4x12.rc
+++ b/init.smdk4x12.rc
@@ -18,6 +18,8 @@ on early-init
     symlink /storage/usbdisk0 /mnt/usbdisk0
 
     mkdir /efs 0771 radio system
+    mkdir /tombstones
+    symlink /efs /factory
 
 # ko files for FM Radio
     insmod /system/lib/modules/Si4709_driver.ko
@@ -38,11 +40,53 @@ on fs
     chown radio system /efs
     chmod 0771 /efs
 
+#MDM requirement
+    mkdir /firmware 0771 system system
+    mount vfat /dev/block/mmcblk0p10 /firmware ro shortname=lower fmask=0133,dmask=0022
+    chown system system /tombstones
+    chmod 0775 /tombstones
+    mkdir /tombstones/modem 0775 system system
+    mkdir /tombstones/lpass 0775 system system
+    mkdir /tombstones/wcnss 0775 system system
+    mkdir /tombstones/dsps 0775 system system
+    rmdir /tombstones/qcks
+    mkdir /tombstones/qcks 771 system system
+    rmdir /tombstones/efs
+    mkdir /tombstones/efs 771 system system
+
+    chown system radio /dev/block/platform/dw_mmc/by-name
+    chmod 0775 /dev/block/platform/dw_mmc/by-name    
+
 on post-fs-data
      # we will remap this as /mnt/sdcard with the sdcard fuse tool
      mkdir /data/media 0775 media_rw media_rw
      chown media_rw media_rw /data/media
 
+#QCRIL
+
+    #Create QMUX deamon socket area
+    mkdir /dev/socket/qmux_radio 0770 radio radio
+    chmod 2770 /dev/socket/qmux_radio
+    mkdir /dev/socket/qmux_audio 0770 media audio
+    chmod 2770 /dev/socket/qmux_audio
+    mkdir /dev/socket/qmux_gps 0770 gps gps
+    chmod 2770 /dev/socket/qmux_gps
+
+    # Allow QMUX daemon to assign port open wait time
+    chown radio radio /sys/devices/virtual/hsicctl/hsicctl0/modem_wait
+
+    # To prevent out of order acknowledgements from making
+    # connection tracking to treat them as not belonging to
+    # the connection they belong to.
+    # Otherwise, a weird issue happens in which some long
+    # connections on high-throughput links get dropped when
+    # an ack packet comes out of order
+    write /proc/sys/net/netfilter/nf_conntrack_tcp_be_liberal 1
+
+# Waketime fot fast dormancy
+    chown system radio /sys/devices/platform/mdm_hsic_pm0/waketime
+    chmod 0660 /sys/devices/platform/mdm_hsic_pm0/waketime
+    
 # data/log
     mkdir /data/log 0775 system log
     chown system log /data/log
@@ -114,7 +158,7 @@ on post-fs-data
     setprop ro.nfc.port "I2C"
     chmod 0600 /dev/pn544
     chown nfc nfc /dev/pn544
-    
+
 # Vibrator
     chmod 0660 /dev/tspdrv
     chown root shell /dev/tspdrv
@@ -418,6 +462,16 @@ service sec_keyboard /system/bin/sec_keyboard /dev/ttySAC2
 	disabled
 	group system
 
+# SISO-ANDR_PERF :: START Changing scheduler to cfq and reseting cpu min freq to -1 after boot complete
+#on property:sys.boot_completed=1
+#    write /sys/block/mmcblk0/queue/scheduler cfq
+#    write /sys/power/cpufreq_min_limit -1
+#    write /proc/sys/net/ipv6/conf/rmnet_usb0/accept_ra 2
+#    write /proc/sys/net/ipv6/conf/rmnet_usb1/accept_ra 2
+#    write /proc/sys/net/ipv6/conf/rmnet_usb2/accept_ra 2
+#    write /proc/sys/net/ipv6/conf/rmnet_usb3/accept_ra 2
+# SISO-ANDR_PERF :: END
+
 on property:ro.uart_debug=0
 	start sec_keyboard
 
@@ -434,10 +488,22 @@ service icd /system/bin/icd
     group system log
     onrestart exec icd_check
 
-service cpboot-daemon /sbin/cbd -d -p 10
-    class main
-    user root
-    group radio cache inet misc audio sdcard_rw log
+# AT Distributor for factory test
+#service at_distributor /system/bin/at_distributor
+#    class main
+#    user root
+#    group radio log
+
+# diag app for cp uart
+#service diag_uart_log /system/bin/diag_uart_log
+#    class main
+#    user root
+#    group radio
+
+#service cpboot-daemon /sbin/cbd -d -p 10
+#    class main
+#    user root
+#    group radio cache inet misc audio sdcard_rw log
 
 service p2p_supplicant /system/bin/wpa_supplicant \
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
@@ -494,16 +560,53 @@ service iprenew_bnep0 /system/bin/dhcpcd -n
 	disabled
 	oneshot
 
+#service secstarter /system/bin/secstarter
+#NOT NEEDED
+#    class main
+#    user system
+#    group system
+
 service macloader /system/bin/macloader
     class main
     oneshot
 
-# GPS
-service gpsd /system/bin/gpsd -c /system/etc/gps.xml
+service netmgrd /system/bin/netmgrd
+    class late_start
+
+service qc_kickstart /system/bin/qcks s
+    class core
+    user root
+    group radio cache inet misc audio sdcard_rw log
+
+service ril-daemon /system/bin/rild
     class main
-    socket gps seqpacket 0660 gps system
-    user gps
-    group system inet sdcard_rw
+    socket rild stream 660 root radio
+    socket rild-debug stream 660 radio system
+    user root
+    group radio cache inet misc audio sdcard_rw qcom_oncrpc diag log sdcard_r
+
+service secril-daemon /system/bin/sec-ril
+    class main
+    user root
+    group radio cache inet misc audio sdcard_rw diag log
+
+#For EncryptionMode - remove disabled, Modify class main
+#NOT NEEDED
+#service qmiproxy /system/bin/qmiproxy
+#    class main
+#    user radio
+#    group radio gps
+
+service qmuxd /system/bin/qmuxd
+    class main
+    user root
+    group radio log audio bluetooth gps log
+
+#start GNSS/Sensor interface daemon
+service gsiff_daemon /system/bin/gsiff_daemon
+    class late_start
+    user system
+    group qcom_oncrpc gps
 
 service dmb /system/bin/dmbserver
     class main
