--- a/ueventd.smdk4x12.rc
+++ b/ueventd.smdk4x12.rc
@@ -82,6 +82,9 @@
 /dev/block/mmcblk0p5      0660   system     radio
 /dev/block/mmcblk0p6      0660   system     radio
 /dev/block/mmcblk0p11     0660   system     radio
+/dev/mdm               0660   system     system
+#CPRM
+/dev/block/mmcblk1	  0660   root	    system
 /dev/ttyUSB0              0666   system     system
 /dev/ttyUSB1              0666   system     system
 /dev/ttyUSB2              0666   system     system
@@ -89,10 +92,6 @@
 /dev/usb/lp*              0660   system     usb
 
 /dev/ttySAC*	          0660	 root	 system
-/dev/umts*                0660   system     radio
-/dev/lte*                 0660   system     radio 
-/dev/cdma*                0660   system     radio 
-/dev/link_pm              0660   system     radio
 
 # sensor sysfs properties
 /sys/devices/virtual/input/input*   acc_poll_delay  0660  system   radio
@@ -104,3 +103,14 @@
 # sensorhub
 /dev/ssp_sensorhub        0660   system     input
 
+# for felica
+#/dev/felica             0666    root    root
+#/dev/felica_pon         0666    root    root
+#/dev/felica_cen         0666    root    root
+#/dev/felica_rfs         0444    root    root
+#/dev/felica_rws         0666    root    root
+#/dev/felica_ant         0666    root    root
+#/dev/felica_int_poll    0400    root    root
+#/dev/felica_uid         0222    root    root
+
+# for felica end
