--- a/init.smdk4x12.rc
+++ b/init.smdk4x12.rc
@@ -83,6 +83,10 @@ on post-fs-data
     # an ack packet comes out of order
     write /proc/sys/net/netfilter/nf_conntrack_tcp_be_liberal 1
 
+# for AT distributor
+    chown system radio /sys/module/cpuidle_exynos4/parameters/enable_mask
+    chmod 0664 /sys/module/cpuidle_exynos4/parameters/enable_mask
+
 # Waketime fot fast dormancy
     chown system radio /sys/devices/platform/mdm_hsic_pm0/waketime
     chmod 0660 /sys/devices/platform/mdm_hsic_pm0/waketime
@@ -106,15 +110,6 @@ on post-fs-data
     mkdir /data/misc/radio 0775 radio system
     chmod 0775 /data/misc/radio
     mkdir /efs/imei 0775 radio system
-
-# icd
-    exec icd_check
-    chown system system /dev/icd
-    chmod 0644 /dev/icd
-    write /dev/icdr 0
-    chown system system /dev/icdr
-    chmod 0644 /dev/icdr
-    chown system system /dev/tzic
 
 # HDCP 2.x
     mkdir /data/system/hdcp2 0775 system system
@@ -463,9 +458,9 @@ service sec_keyboard /system/bin/sec_keyboard /dev/ttySAC2
 	group system
 
 # SISO-ANDR_PERF :: START Changing scheduler to cfq and reseting cpu min freq to -1 after boot complete
-#on property:sys.boot_completed=1
-#    write /sys/block/mmcblk0/queue/scheduler cfq
-#    write /sys/power/cpufreq_min_limit -1
+on property:sys.boot_completed=1
+    write /sys/block/mmcblk0/queue/scheduler cfq
+    write /sys/power/cpufreq_min_limit -1
 #    write /proc/sys/net/ipv6/conf/rmnet_usb0/accept_ra 2
 #    write /proc/sys/net/ipv6/conf/rmnet_usb1/accept_ra 2
 #    write /proc/sys/net/ipv6/conf/rmnet_usb2/accept_ra 2
@@ -481,13 +476,6 @@ on property:ro.uart_debug=0
 service sdcard /system/bin/sdcard /data/media 1023 1023
     class main
 
-# icd
-service icd /system/bin/icd
-    class main
-    user system
-    group system log
-    onrestart exec icd_check
-
 # AT Distributor for factory test
 service at_distributor /system/bin/at_distributor
     class main
@@ -495,10 +483,10 @@ service at_distributor /system/bin/at_distributor
     group radio log
 
 # diag app for cp uart
-#service diag_uart_log /system/bin/diag_uart_log
-#    class main
-#    user root
-#    group radio
+service diag_uart_log /system/bin/diag_uart_log
+    class main
+    user root
+    group radio
 
 #service cpboot-daemon /sbin/cbd -d -p 10
 #    class main
@@ -583,17 +571,10 @@ service qc_kickstart /system/bin/qcks s
     user root
     group radio cache inet misc audio sdcard_rw log
 
-service ril-daemon /system/bin/rild
-    class main
-    socket rild stream 660 root radio
-    socket rild-debug stream 660 radio system
-    user root
-    group radio cache inet misc audio sdcard_rw qcom_oncrpc diag log sdcard_r
-
 service secril-daemon /system/bin/sec-ril
     class main
     user root
-    group radio cache inet misc audio sdcard_rw diag log
+    group radio cache inet misc audio sdcard_rw qcom_diag log
 
 #For EncryptionMode - remove disabled, Modify class main
 service qmiproxy /system/bin/qmiproxy
@@ -624,10 +605,11 @@ service sensorhubservice /system/bin/sensorhubservice
     group input
 
 # TVout
-service TvoutService_C /system/bin/bintvoutservice
-    class main
-    user system
-    group graphics
+#service TvoutService_C /system/bin/bintvoutservice
+#    class main
+#    user system
+#    group graphics
+
 
 on property:ro.tvout.enable=false
     stop TvoutService_C
